# WEB_HW_10

./: README.md  pyproject.toml
homework/homework/: settings.py  urls.py
homework/polls/: urls.py
homework/polls/templates/polls/: index.html
web_hw_10/quote/: forms.py  models.py  urls.py  views.py
web_hw_10/quote/migrations/: 0001_initial.py  0002_quote_user_tag_user_tag_tag_of_username.py
web_hw_10/quote/templates/quote/: base.html  index.html  quote.html
web_hw_10/users/: urls.py  views.py
web_hw_10/users/migrations/: 0001_initial.py
web_hw_10/users/templates/users/: login.html  sign_up.html
web_hw_10/web_hw_10/: settings.py
