[tool.poetry]
name = "web-hw-10"
version = "0.1.0"
description = ""
authors = ["anton <aillarionov@b2bsoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.2"
psycopg2 = "^2.9.9"
pillow = "^10.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
